j17, felles bump, swagger bump, gha bump